2016-05-22  Eric Herman <eric@freesa.org>

	ensure tests do not return values out of range
	or (mod 256 == EXIT_SUCCESS)

2016-05-21  Eric Herman <eric@freesa.org>

	add "demo" and "valgrind" targets

2016-05-18  Eric Herman <eric@freesa.org>

	seems to be mostly working with autotools

	* ChangeLog: Freshly created ChangeLog.